# Extral

./: .gdb_history  .gitignore  DESCRIPTION.txt  Extral.html  Extral.txt  Makefile  Makefile.in  Makefile.tk4  README  README.md  Readme.html  Readme.txt  build.tcl  buildwin.tcl  configure  configure.in  extraLInit.c  extral.README  extral.c  extral.c.old  extral.c.tk3  extral.c.tk3.save  extral.c.tk4  extral.lib  extral.tcl  extral.tcl.save  extral.tea  extral.txt  extralInit.c  init.tcl  makedist.tcl  makedoc.tcl  pkgIndex.tcl  pkgIndex.tcl.in  st  startextral.tcl  starttk4  temp  testing.tcl  todo  (+4 more)
docs/: Extral.html  amanip.html  amanip.txt  arraycommands.html  atexit.html  atexit.txt  cmd.html  convenience.html  convenience.txt  dbm.html  dbm.txt  ffind.html  ffind.txt  filing.html  filing.txt  index.html  infocommands.html  leval.html  leval.txt  listcommands.html  listcommands.txt  literate.txt  lmanip.html  lmanip.txt  lmath.html  lmath.txt  map.html  ssort.html  ssort.txt  stringcommands.html  struct.html  struct.tcl  structl.html  structl.txt  tempdir.html  tempfile.html  tempfile.txt  time.html  time.txt  validatecommands.html
experiment/: try.tcl  tryobject.tcl
src/: .gdb_history  Makefile  Makefile.in  array.c  bsddbm.c  config.status  configure  configure.in  date.c  dbm.c  extral.c  extral.c.save  extral.h  extral.spec  extralInit.c  extratcl  gdbm.c  general.c  general.h  leval.c  lfile.c  list_pop.c  lpop.c  lpop.c.save  map.c  nonl.c  obsolete.c  string.c  structl.c  structltypes.c  supersort.c  tagl.c  tclAppInit.c  win.c
src/obsolete/: obsolete.c
(+167 files in other folders)
