dnl	This file is an input file used by the GNU "autoconf" program to
dnl	generate the file "configure", which is run to configure the
dnl	Makefile in this directory.
AC_INIT(extral.c)
# SCCS: @(#) configure.in 1.9 96/04/15 09:50:20

if test "${prefix}" = "NONE"; then
    prefix=/usr/local
    echo "setting prefix to: ${prefix}"
fi
if test "${exec_prefix}" = "NONE"; then
    exec_prefix=$prefix
    echo "setting exec-prefix to: ${exec_prefix}"
fi

AC_ARG_WITH(tclconfigdir, [  --with-tclconfigdir=DIR		Use tclConfig.sh from
DIR],
        TCL_CONFIG_DIR=$withval, TCL_CONFIG_DIR=`cd ${exec_prefix}/lib; pwd`)

if test ! -f $TCL_CONFIG_DIR/tclConfig.sh; then
	AC_MSG_ERROR($TCL_CONFIG_DIR/tclConfig.sh not found)
fi
echo "Using $TCL_CONFIG_DIR/tclConfig.sh"
file=$TCL_CONFIG_DIR/tclConfig.sh
. $file

CC=$TCL_CC
SHLIB_CFLAGS=$TCL_SHLIB_CFLAGS
SHLIB_LD=$TCL_SHLIB_LD
SHLIB_LD_LIBS=$TCL_SHLIB_LD_LIBS
SHLIB_SUFFIX=$TCL_SHLIB_SUFFIX
SHLIB_VERSION=$TCL_SHLIB_VERSION
TCL_LIBS=$TCL_LIBS
TCL_VERSION=$TCL_VERSION

AC_SUBST(CC)
AC_SUBST(SHLIB_CFLAGS)
AC_SUBST(SHLIB_LD)
AC_SUBST(SHLIB_LD_LIBS)
AC_SUBST(SHLIB_SUFFIX)
AC_SUBST(SHLIB_VERSION)
AC_SUBST(TCL_BUILD_LIB_SPEC)
AC_SUBST(TCL_LIB_SPEC)
AC_SUBST(TCL_LIBS)
AC_SUBST(TCL_VERSION)
AC_SUBST(TCL_SRC_DIR)

AC_SUBST(TK_DEFS)
AC_SUBST(TK_LIBS)
AC_SUBST(TK_XINCLUDES)
AC_SUBST(TK_XLIBSW)
AC_SUBST(TK_BUILD_LIB_SPEC)
AC_SUBST(TK_LIB_SPEC)
AC_SUBST(TK_SRC_DIR)

AC_OUTPUT(Makefile)
